<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="10dp"
              android:gravity="center">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text=""
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        android:id="@+id/txt_name"
        android:layout_margin="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:id="@+id/btnStart"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/multiplayer"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:id="@+id/btnMulti"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:id="@+id/btnLogout"/>

</LinearLayout>